fix include dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(TFS_PROTOS
 )
 
 set(PROTOBUF_IMPORT_DIRS
-  ${SERVING_SOURCE_DIR}/tensorflow/
+  ${TENSORFLOW_INCLUDE_DIR}
 )
 
 set(PROTO_SRC_DIR ${CMAKE_CURRENT_BINARY_DIR}/proto-src)
